--- a/project.css
+++ b/project.css
@@ -1,62 +1,79 @@
 * {
-    box-sizing: border-box;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
-body {
-display: flex;
-align-items:center;
-justify-content: center;
-font-family:Arial, Helvetica, sans-serif;
-min-height: 100vh;
+
+.container {
+    width: 70%;
+    margin: 100px auto;
 }
-button {
+
+header {
+    background: rgb(2, 2, 101);
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    padding: 15px;
+}
+header h2 {
+    flex: 1;
+}
+header .c-tasks-count,
+header .c-tasks-done {
     width: 40px;
-    height: 30px;
-    background-color: coral;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+header .c-tasks-count{
+    background-color: #fff;
+    color:#0688CF
+}
+header .c-tasks-done{
+    background-color: #0688CF;
+    color: #fff;
+}
+
+h1 {
+margin-bottom:20px;
+color: #0f1742;
+font-size: 40px;
+font-weight: bolder;
+}
+
+form {
+    width: 80%;
+    margin: auto;
+}
+
+form input,
+form button,
+form #clear-btn {
+    font-size: 20px;
+    padding: 10px;
     border: none;
     outline: none;
-    border-radius: 3px;
-    padding: 4px;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
+    border-radius: 8px;
 }
 
-button.active {
-    transform: translateX(-200px);
+form input {
+    background-color: #b4e3e1;
+    width:calc(80% - 20px);
 }
-button span {
-display: block;
-width: 100%;
-height: 4px;
-background-color: #fff;
+form button {background-color: #0688CF;
+    width: 10%;
+    margin: 0 20px 0;
+    color: #fff;
 }
-button span:nth-child(2) {
-    margin: 5px 0;
-}
-nav {
-    background-color: coral;
-    padding: 15px;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 200px;
-    transform: translateX(100%);
-}
-nav.active {
-    transform: translateX(0);
-}
-nav ul {
-    list-style: none;
-}
-nav ul li {
-    padding: 10px 0;
-}
-nav ul li a {
-    color:#fff;
-    text-decoration: none;
 
-} 
+.tasks-empty {
+    text-align: center;
+    color: #0688CF;
+    margin: 20px 0;
+}
